--- a/table.html
+++ b/table.html
@@ -26,7 +26,7 @@
     <h3>Rules for Table.</h3>
     <ul>
         <li>State 0 is for the elements that it can start with: ( and id. </li>
-
+        <li>State 5 is for when the previous element is an id. </li>
     </ul>
 
     <h3>Reverse Rules</h3>
