--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <body>
     <h1>Honors Project</h1>
-    <a href="table.html"><button>Page 2</button></a>
+    <a href="table.html"><button>Notes</button></a>
+    <a href="attempt2.html"><button>Attempt2</button></a>
+    <a href="getRules.html"><button>Get Rules</button></a>
+    <a href="tableize.html"><button>Tableize</button></a>
+
     <script src="script.js"></script>
     <ol>
         <li>E → E + T</li>
