--- a/table.html
+++ b/table.html
@@ -38,6 +38,484 @@
         <li>T → E</li>
         <li>E + T → E</li>
     </ol>
+
+    <h3>Example Table</h3>
+    <table>
+        <tr>
+            <th></th>
+            <th colspan="3">Action</th>
+            <th class="blank"></th>
+            <th>Goto</th>
+        </tr>
+        <tr>
+            <th>State</th>
+            <td>(</td>
+            <td>)</td>
+            <td>$</td>
+            <td class="blank"></td>
+            <td>X</td>
+        </tr>
+        <tr>
+            <th>0</th>
+            <td>S2</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td></td>
+            <td></td>
+            <td>accept</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td>S2</td>
+            <td>S5</td>
+            <td></td>
+            <td class="blank"></td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>3</th>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>4</th>
+            <td>R2</td>
+            <td>R2</td>
+            <td>R2</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>5</th>
+            <td>R3</td>
+            <td>R3</td>
+            <td>R3</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+    </table>
+    <h3>Rules</h3>
+    <ol>
+        <li>S → X</li>
+        <li>X → (X)</li>
+        <li>X → ( )</li>
+    </ol>
+
+    <h3>Can I Do This From My Picture?</h3>
+    <table>
+        <tr>
+            <th></th>
+            <th colspan="3">Action</th>
+            <th class="blank"></th>
+            <th>Goto</th>
+        </tr>
+        <tr>
+            <th>State</th>
+            <td>(</td>
+            <td>)</td>
+            <td>$</td>
+            <td class="blank"></td>
+            <td>X</td>
+        </tr>
+        <tr>
+            <th>0</th>
+            <td>S2</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td></td>
+            <td></td>
+            <td>accept</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td>S2</td>
+            <td>S5</td>
+            <td></td>
+            <td class="blank"></td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>3</th>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>4</th>
+            <td>R2</td>
+            <td>R2</td>
+            <td>R2</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>5</th>
+            <td>R3</td>
+            <td>R3</td>
+            <td>R3</td>
+            <td class="blank"></td>
+            <td></td>
+        </tr>
+    </table>
+
+    <h3>All Possible Locations</h3>
+    <ul>
+        <li>E → •E+T</li>
+        <li>F → (•E)</li>
+        <br>
+
+        <li>E → •T</li>
+        <li>T → •T*F</li>
+        <li>E → E+•T</li>
+        <br>
+        
+        <li>T → •F</li> 
+        <li>T → T*•F</li>
+        <br>
+        <li>F → •(E)</li>
+        <br>
+        <li>F → •id</li>
+        <br>
+        <li>E → E•+T</li>
+        <li>T → T•*F</li>
+        <br>
+        <li>F → (E•)</li>
+        <br>
+        <li>E → T•</li>
+        <li>E → E+T•</li>
+        <li>T → F•</li>
+        <li>T → T*F•</li>
+        <li>F → (E)•</li>
+        <li>F → id•</li>
+    </ul>
+
+
+    <h3>Attempt To Fill In Table</h3>
+    <table>
+        <tr>
+            <th> </th>
+            <th colspan="6">Action</th>
+            <th class="blank"> </th>
+            <th colspan="3">Goto</th>
+        </tr>
+        <tr>
+            <th>State</th>
+            <td>id</td>
+            <td>+</td>
+            <td>*</td>
+            <td>(</td>
+            <td>)</td>
+            <td>$</td>
+            <td class="blank"></td>
+            <td>E</td>
+            <td>T</td>
+            <td>F</td>
+        </tr>
+        <tr>
+            <th>0</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>11</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td></td>
+            <td>S7</td>
+            <td></td>
+            <td></td>
+            <td>S6</td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td></td>
+            <td>R2</td>
+            <td>S9</td>
+            <td></td>
+            <td>R2</td>
+            <td>R2</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>3</th>
+            <td></td>
+            <td>R4</td>
+            <td>R4</td>
+            <td></td>
+            <td>R4</td>
+            <td>R4</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>4</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>5</th>
+            <td></td>
+            <td>R6</td>
+            <td>R6</td>
+            <td></td>
+            <td>R6</td>
+            <td>R6</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>6</th>
+            <td></td>
+            <td>R5</td>
+            <td>R5</td>
+            <td></td>
+            <td>R5</td>
+            <td>R5</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>7</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td>8</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>8</th>
+            <td></td>
+            <td>R1</td>
+            <td>S9</td>
+            <td></td>
+            <td>R1</td>
+            <td>R1</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>9</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <th>10</th>
+            <td></td>
+            <td>R3</td>
+            <td>R3</td>
+            <td></td>
+            <td>R3</td>
+            <td>R3</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>11</th>
+            <td></td>
+            <td>S7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>accept</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+
+    <h3>Rules 4</h3>
+    <ol>
+        <li>P → E</li>
+        <li>E → E + T</li>
+        <li>E → T</li>
+        <li>T → id ( E )</li>
+        <li>T → id</li>
+    </ol>
+
+    <table>
+        <tr>
+            <th></th>
+            <th colspan="5">Action</th>
+            <th class="blank"></th>
+            <th colspan="2">Goto</th>
+        </tr>
+        <tr>
+            <th>State</th>
+            <td>id</td>
+            <td>(</td>
+            <td>)</td>
+            <td>+</td>
+            <td>$</td>
+            <td class="blank"></td>
+            <td>E</td>
+            <td>T</td>
+        </tr>
+        <tr>
+            <th>0</th>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>1</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>S2</td>
+            <td>accept</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>3</th>
+            <td></td>
+            <td></td>
+            <td><mark>R2</mark></td>
+            <td><mark>R2</mark></td>
+            <td>R2...</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>4</th>
+            <td></td>
+            <td>S5</td>
+            <td><mark>R5</mark></td>
+            <td><mark>R5</mark></td>
+            <td>R5...</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>5</th>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>6</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <th>6</th>
+            <td></td>
+            <td></td>
+            <td>S7</td>
+            <td>S2</td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>7</th>
+            <td></td>
+            <td></td>
+            <td><mark>R4</mark></td>
+            <td><mark>R4</mark></td>
+            <td>R4...</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>8</th>
+            <td></td>
+            <td></td>
+            <td><mark>R3</mark></td>
+            <td><mark>R3</mark></td>
+            <td>R3...</td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <br><br>
 </body>
 
 </html>
