--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="attempt2.html"><button>Attempt2</button></a>
     <a href="getRules.html"><button>Get Rules</button></a>
     <a href="tableize.html"><button>Tableize</button></a>
-
+    <a href="classed.html"><button>Classed</button></a>
     <script src="script.js"></script>
     <ol>
         <li>E → E + T</li>
