--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="getRules.html"><button>Get Rules</button></a>
     <a href="tableize.html"><button>Tableize</button></a>
     <a href="classed.html"><button>Classed</button></a>
+    <a href="autoTable.html"><button>Auto Table</button></a>
     <script src="script.js"></script>
     <ol>
         <li>E → E + T</li>
