--- a/table.html
+++ b/table.html
@@ -187,8 +187,8 @@
         <li>T → •T*F</li>
         <li>E → E+•T</li>
         <br>
-        
-        <li>T → •F</li> 
+
+        <li>T → •F</li>
         <li>T → T*•F</li>
         <br>
         <li>F → •(E)</li>
@@ -516,6 +516,208 @@
         </tr>
     </table>
     <br><br>
+
+    <h3>Does this Table Actually Work?</h3>
+    <p> <br> Add [0, E] = 1
+        <br> Add [0, T] = 2
+        <br> Add [0, F] = 3
+        <br> Add [0, (] = 4
+        <br> Add [0, id] = 5
+        <br> Add [1, +] = 6
+        <br> Add [2, *] = 7
+        <br> Add [4, E] = 8
+        <br> Add [4, T] = 2
+        <br> Add [4, F] = 3
+        <br> Add [4, (] = 4
+        <br> Add [4, id] = 5
+        <br> Add [6, T] = 9
+        <br> Add [6, F] = 3
+        <br> Add [6, (] = 4
+        <br> Add [6, id] = 5
+        <br> Add [7, F] = 10
+        <br> Add [7, (] = 4
+        <br> Add [7, id] = 5
+        <br> Add [8, )] = 11
+        <br> Add [8, +] = 6
+        <br> Add [9, *] = 7
+    </p>
+    <table>
+        <tr>
+            <th> </th>
+            <th colspan="6">Action</th>
+            <th class="blank"> </th>
+            <th colspan="3">Goto</th>
+        </tr>
+        <tr>
+            <th>State</th>
+            <td>id</td>
+            <td>+</td>
+            <td>*</td>
+            <td>(</td>
+            <td>)</td>
+            <td>$</td>
+            <td class="blank"></td>
+            <td>E</td>
+            <td>T</td>
+            <td>F</td>
+        </tr>
+        <tr>
+            <th>0</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td></td>
+            <td>S6</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td></td>
+            <td></td>
+            <td>S7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>3</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>4</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td>8</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>5</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>6</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td>9</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <th>7</th>
+            <td>S5</td>
+            <td></td>
+            <td></td>
+            <td>S4</td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <th>8</th>
+            <td></td>
+            <td>S6</td>
+            <td></td>
+            <td></td>
+            <td>S11</td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>9</th>
+            <td></td>
+            <td></td>
+            <td>S7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>10</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>11</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="blank"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
 </body>
 
 </html>
