--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="tableize.html"><button>Tableize</button></a>
     <a href="classed.html"><button>Classed</button></a>
     <a href="autoTable.html"><button>Auto Table</button></a>
+    <a href="bigCahoon.html"><button>Big Cahoon</button></a>
     <script src="script.js"></script>
     <ol>
         <li>E → E + T</li>
