Honestly, I don't know what is being updated

--- a/autoTable.html
+++ b/autoTable.html
@@ -12,25 +12,29 @@
 
 <body>
     <h1>Auto Table</h1>
-    <a href="index.html"><button>Home</button></a>
-    <script src="autoTable.js"></script>
-    <br>
+    <nav>
+        <a href="index.html"><button>Home</button></a>
+    </nav>
+        <script src="autoTable.js"></script>
 
-    <br>
-    <h3>Production Rules</h3>
-    <ol>
-        <!-- <li>S → X</li>
+                <h3>Production Rules</h3>
+                <ol>
+                    <!-- <li>S → X</li>
         <li>X → ( X )</li>
         <li>X → ( )</li> -->
-        <li>E → E + T</li>
-        <li>E → T</li>
-        <li>T → T * F</li>
-        <li>T → F</li>
-        <li>F → (E)</li>
-        <li>F → id</li>
-    </ol>
-    <button onclick="makeTableButton()">Make Table</button>
-    <div id="tableDiv"></div>
+                    <li>E → E + T</li>
+                    <li>E → T</li>
+                    <li>T → T * F</li>
+                    <li>T → F</li>
+                    <li>F → (E)</li>
+                    <li>F → id</li>
+                </ol>
+
+        <nav>
+            <button onclick="makeTableButton()">Make Table</button>
+        </nav>
+            <div id="tableDiv"></div>
+    </div>
 </body>
 
 </html>
