--- a/bigCahoon.html
+++ b/bigCahoon.html
@@ -12,7 +12,9 @@
 
 <body>
     <h1>Auto Table</h1>
-    <a href="index.html"><button>Home</button></a>
+    <nav>
+        <a href="index.html"><button>Home</button></a>
+    </nav>
     <script src="bigCahoon.js"></script>
     <br>
 
@@ -30,7 +32,9 @@
         <li>F → id</li> -->
     </ol>
     <button onclick="makeTableButton()">Make Table</button>
-    <div id="tableDiv"></div>
+    <div class="centered">
+        <div id="tableDiv"></div>
+    </div>
 </body>
 
 </html>
