--- a/autoTable.html
+++ b/autoTable.html
@@ -15,6 +15,7 @@
     <nav>
         <a href="index.html"><button>Home</button></a>
     </nav>
+    <p>The code is generating a table, from an array in the code. However, I never fully implemented it for the user to change the Production Rules. But my code can still generate the table from any production rules. </p>
         <script src="autoTable.js"></script>
 
                 <h3>Production Rules</h3>
