--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 <body>
     <h1>Honors Project</h1>
     <nav>
-        <a href="table.html"><button>Notes</button></a>
-        <a href="attempt2.html"><button>Attempt2</button></a>
+        <a href="attempt2.html"><button>Highlight Values on Table</button></a>
         <a href="getRules.html"><button>Get Rules</button></a>
-        <a href="tableize.html"><button>Tableize</button></a>
-        <a href="classed.html"><button>Classed</button></a>
-        <a href="autoTable.html"><button>Auto Table</button></a>
-        <a href="bigCahoon.html"><button>Big Cahoon</button></a>
+        <a href="autoTable.html"><button>Generate Table</button></a>
         <a href="layout.html"><button>Layout</button></a>
     </nav>
     <script src="script.js"></script>
