--- a/table.html
+++ b/table.html
@@ -718,6 +718,14 @@
             <td></td>
         </tr>
     </table>
+
+    <h3>Notes On Layouts </h3>
+    <p>How Do I want to Move Forward?</p>
+    <p>I Think Maybe It's time to just work on the reduce thing!</p>
+    <p>And then from there I should work on making it have states, and that way Everything will run good.</p>
+    <h3>Here are links to others projects</h3>
+    <a href="https://rileyzzz.dev/shift-reduce-parser/">rileyzzz</a>
+    <a href="https://gmuslow.github.io/">Grant Muslow</a>
 </body>
 
 </html>
